# wavefront

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
include/: Wavefront.hpp  WavefrontParser.hpp
src/: CMakeLists.txt  Wavefront.cpp  WavefrontParser.cpp
tests/: CMakeLists.txt  parser_tests.cpp
